Fix typo in man page of sbatch

--- a/doc/man/man1/sbatch.1
+++ b/doc/man/man1/sbatch.1
@@ -1753,7 +1753,7 @@ desired for the job allocation and optionally the maximum time to wait
 for that number of switches. If Slurm finds an allocation containing more
 switches than the count specified, the job remains pending until it either finds
 an allocation with desired switch count or the time limit expires.
-It there is no switch count limit, there is no delay in starting the job.
+If there is no switch count limit, there is no delay in starting the job.
 Acceptable time formats include "minutes", "minutes:seconds",
 "hours:minutes:seconds", "days\-hours", "days\-hours:minutes" and
 "days\-hours:minutes:seconds".
